<resources>
    <string name="app_name">crypto-currency-market-price</string>
    <string name="market_price">Market Price</string>
    <string name="text_under_price">Average USD market price across major bitcoin exchanges.</string>
    <string name="sign_in_title">Bitcoin Price</string>
    <string name="name">Name</string>
    <string name="enter_email_here_hint">enter e-mail here</string>
    <string name="password">Password</string>
    <string name="enter_password_here_hint">enter password here</string>
    <string name="sign_in">Sign In</string>
    <string name="first_timer_text">first timer? no problem! enter name and password and you will be signed up
        automatically
    </string>
    <string name="e_mail">E-mail</string>
    <string name="previous_price_text">last time you were here the price was:</string>
    <string name="no_previous_information">no previous information</string>

</resources>
