<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.view.LoginActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/card_background"
            android:scaleType="centerCrop" />

    <ImageView
            android:layout_gravity="top"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/black_gradient_top"
            android:id="@+id/imageView3"/>
    <ImageView
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/black_gradient"
            android:id="@+id/imageView2"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >
        <TextView
                android:text="@string/sign_in_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="80sp"
                android:textColor="@color/white"
                android:fontFamily="cursive"
                android:layout_marginTop="30sp"
        />
        <TextView
                android:text="@string/e_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginTop="40sp"
        />
        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColorHint="@color/lightGray"
                android:textColor="@color/white"
                android:hint="@string/enter_email_here_hint"
                android:maxLength="30"
                android:layout_marginTop="10sp"
                android:ems="10"
        />
        <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:layout_marginTop="15sp"
        />
        <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password_here_hint"
                android:layout_marginTop="10sp"
                android:inputType="textPassword"
                android:textColorHint="@color/lightGray"
                android:textColor="@color/white"
                android:maxLength="20"
                android:ems="10"
        />
        <Button
                android:id="@+id/signInButton"
                android:text="@string/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/sign_in_button_style"
                android:layout_marginTop="60sp"
        />
        <TextView
                android:text="@string/first_timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/lightGray"
                android:textStyle="italic"
        />
    </LinearLayout>
    <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
</RelativeLayout>

