<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".bitcoinpricemainscreen.view.CryptoPriceActivity">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/card_background"
                android:id="@+id/imageView"/>
        <Button
                android:layout_width="32dp"
                android:background="@drawable/refresh_icon"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="20dp"
                android:layout_height="32dp"
                android:id="@+id/refreshButton"
                android:layout_marginEnd="20dp"/>
        <TextView
                android:text="$"
                android:textSize="40sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/priceTextView"/>
        <ImageView
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/black_gradient"
                android:id="@+id/imageView2"/>
        <ImageView
                android:layout_gravity="top"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:srcCompat="@drawable/black_gradient_top"
                android:id="@+id/imageView3"/>
        <TextView
                android:text="@string/market_price"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"/>
        <ProgressBar
                android:id="@+id/previousPriceProgress"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center|bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="5sp"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_gravity="center_horizontal|bottom">
            <TextView
                    android:text="@string/text_under_price"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/textView2"/>
            <TextView
                    android:text="@string/previous_price_text"
                    android:textSize="15sp"
                    android:textColor="@color/lightGray"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    />
            <TextView
                    android:text="@string/no_previous_information"
                    android:textSize="15sp"
                    android:textColor="@color/lightGray"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/previousPriceViewed"/>
        </LinearLayout>

        <ProgressBar
                android:id="@+id/priceProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginTop="250dp"
            android:layout_height="match_parent">

        <TextView
                android:text="3 week overview"
                android:textSize="25sp"
                android:textColor="@color/darkBlue"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timespanTextView"/>
        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/bitcoinPriceChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="35dp" />
        <ProgressBar
                android:id="@+id/chartProgressBar"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:theme="@style/progressBarBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:max="10"
                android:progress="3"
                android:id="@+id/timespanSeekBar"/>
    </androidx.cardview.widget.CardView>
</RelativeLayout>